--- a/src/Resources/template/backend/contents/composer/project_view/content.html.twig
+++ b/src/Resources/template/backend/contents/composer/project_view/content.html.twig
@@ -32,6 +32,35 @@
 
         <h3>Repositories: </h3>
 
+        <div class="flex-container">
+            <div class="col-1 justify-content-flex-end js-accordion">
+                <div class="btn btn-square-green pseudo-spacer-bottom">
+                    Create
+                </div>
+            </div>
+
+            <div class="flex-container js-accordion-body">
+                <div class="col-1 section">
+                    <form method="post"
+                          action="{{ seo_url('composer_repository.backend_controller.composer','createRepositoryAction') }}"
+                          data-ajax-form
+                    >
+
+                        <label>
+                            Name:
+                            <input type="text" name="name" required>
+                        </label>
+
+                        <input type="hidden" name="projectId" value="{{ project.id }}">
+
+                        <input type="submit" value="Speichern" />
+                    </form>
+                </div>
+                <div class="spacer-m"></div>
+            </div>
+        </div>
+
+
         {% include'backend/contents/composer/project_view/table/table.html.twig' %}
 
     </div>
