--- a/src/Resources/template/backend/contents/composer/overview/content.html.twig
+++ b/src/Resources/template/backend/contents/composer/overview/content.html.twig
@@ -6,6 +6,34 @@
 
     <div class="container">
 
+        <div class="flex-container">
+            <div class="col-1 justify-content-flex-end js-accordion">
+                <div class="btn btn-square-green pseudo-spacer-bottom">
+                    Create
+                </div>
+            </div>
+
+            <div class="flex-container js-accordion-body">
+                <div class="col-1 section">
+                    <form method="post"
+                          action="{{ seo_url('composer_repository.backend_controller.composer','createProjectAction') }}"
+                          data-ajax-form
+                    >
+
+                        <label class="col-2">
+                            Name:
+                            <input type="text" name="name" required>
+                        </label>
+
+                        <input class="col-1" type="submit" value="Speichern" />
+                    </form>
+                </div>
+                <div class="spacer-m"></div>
+            </div>
+        </div>
+
+
+
         {% include'backend/contents/composer/overview/table/table.html.twig' %}
 
     </div>
