--- a/src/Resources/template/backend/contents/composer/overview/content.html.twig
+++ b/src/Resources/template/backend/contents/composer/overview/content.html.twig
@@ -7,7 +7,14 @@
     <div class="container">
 
         <div class="flex-container">
-            <div class="col-1 justify-content-flex-end js-accordion">
+            <div class="col-2">
+                <a href="{{ seo_url('composer_repository.backend_controller.composer', 'webhookCheckAction') }}">
+                    <div class="btn btn-square-yellow pseudo-spacer-bottom">
+                        Check Debug Log
+                    </div>
+                </a>
+            </div>
+            <div class="col-2 justify-content-flex-end js-accordion">
                 <div class="btn btn-square-green pseudo-spacer-bottom">
                     Create
                 </div>
