--- a/src/Resources/template/backend/contents/composer/project_view/table/table_row.html.twig
+++ b/src/Resources/template/backend/contents/composer/project_view/table/table_row.html.twig
@@ -19,7 +19,7 @@
         </td>
 
         <td>
-            {{ repository.data }}
+            {{ repository.data|slice(0,100) }}
         </td>
 
 
