--- a/src/Resources/template/backend/contents/composer/overview/table/table_row.html.twig
+++ b/src/Resources/template/backend/contents/composer/overview/table/table_row.html.twig
@@ -13,7 +13,7 @@
         </td>
 
         <td>
-            <a href="{{ seo_url('composer_repository.backend_controller.composer', 'projectOverviewAction', {project: project.id}) }}">
+            <a href="{{ seo_url('composer.backend.project', {project: project.id}) }}">
                 {{ project.name }}
             </a>
         </td>
