--- a/src/Resources/template/backend/contents/composer/project_view/table/table_row.html.twig
+++ b/src/Resources/template/backend/contents/composer/project_view/table/table_row.html.twig
@@ -13,7 +13,7 @@
         </td>
 
         <td>
-            <a href="{{ seo_url('composer_repository.backend_controller.composer', 'repositoryOverviewAction', {repository: repository.id}) }}">
+            <a href="{{ seo_url('composer.backend.project.repository', {repository: repository.id}) }}">
                 {{ repository.name }}
             </a>
         </td>
