--- a/src/Resources/template/backend/contents/composer/repository_view/content.html.twig
+++ b/src/Resources/template/backend/contents/composer/repository_view/content.html.twig
@@ -2,7 +2,7 @@
 
     {% include 'backend/contents/misc/headline.html.twig' with {
         title: 'Composer Repository Integration',
-        previous: seo_url('composer_repository.backend_controller.composer', 'indexAction')
+        previous: seo_url('composer.backend.index')
     } only %}
 
     <div class="container">
