--- a/src/Resources/template/backend/contents/composer/project_view/content.html.twig
+++ b/src/Resources/template/backend/contents/composer/project_view/content.html.twig
@@ -2,7 +2,7 @@
 
     {% include 'backend/contents/misc/headline.html.twig' with {
         title: 'Composer Repository Integration',
-        previous: seo_url('composer_repository.backend_controller.composer', 'indexAction')
+        previous: seo_url('composer.backend.index')
     } only %}
 
     <div class="container">
@@ -42,7 +42,7 @@
             <div class="flex-container js-accordion-body">
                 <div class="col-1 section">
                     <form method="post"
-                          action="{{ seo_url('composer_repository.backend_controller.composer','createRepositoryAction') }}"
+                          action="{{ seo_url('composer.backend.repository.create') }}"
                           data-ajax-form
                     >
 
